deleted and modified a few files v1.0.1

--- a/views/students/books-request.ejs
+++ b/views/students/books-request.ejs
@@ -35,12 +35,12 @@
                                     </div>
                                 </div>
                                 <hr>
-                                <div class="form-group row">
+                                <!-- <div class="form-group row">
                                     <label class="col-sm-2 col-form-label">Edition</label>
                                     <div class="col-sm-10">
                                         <input type="number" class="form-control" name="edition">
                                     </div>
-                                </div>
+                                </div> -->
                                 <hr>
                                 <div>
                                     <button type="submit" class="btn btn-primary">Request</button>
