--- a/views/students/books.ejs
+++ b/views/students/books.ejs
@@ -27,25 +27,46 @@
                                     </div>
                                 </div>
                             </form>
-                                <% for(var i=0; i< res.length; i++){ %>
-                                    <section class="cards-wrapper">
-                                        <!-- <div class="card-grid-space"> -->
-                                    <a class="card" href="https://codetheweb.blog/2017/10/06/html-syntax/" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
-                                        <div>
-                                            <h4><%=res[i].book_id%></h4>
-                                                <h1><%=res[i].title%></h1>
-                                                <p><%=res[i].genre%></p>
-                                                <div class="date">6 Oct 2017</div>
-                                                <div class="tags">
-                                            <div class="tag">HTML</div>
-                                          </div>
-                                        </div>
-                                      </a>
-                                    </div>
-                                    <!-- <div class="card-grid-space"> -->
-                                    </div>
-                                    </section>
-                                <% } %>
+                            <table class="table table-striped table-light table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Genre</th>
+                                        <th scope="col">Title</th>
+                                        <th scope="col">Author</th>
+                                        <!-- <th scope="col">Action</th> -->
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% for(var i=0; i< res.length; i++){ %>
+                                        <tr>
+                                            <th scope="row">
+                                                <%=res[i].book_id%>
+                                            </th>
+                                            <td>
+                                                <%=res[i].genre%>
+                                            </td>
+                                            <td>
+                                                <%=res[i].title%>
+                                            </td>
+                                            <td>
+                                                <%=res[i].author%>
+                                            </td>
+                                            <!-- <td>
+                                                <% if(res[i].user_id) { %>
+                                                    <a href="/admin/books/edit/<%=res[i].book_id%>">Request to Borrow Book</a> |
+                                                    <a href="/admin/books/delete/<%=res[i].book_id%>">Delete Book</a>
+                                                <% } else { %>
+                                                    <a href="/admin/books/<%=res[i].book_id%>/issue">Issue Book</a> |
+                                                    <a href="/admin/books/edit/<%=res[i].book_id%>">Edit Book</a> |
+                                                    <a href="/admin/books/delete/<%=res[i].book_id%>">Delete Book</a>
+                                                <% } %>
+                                            </td> -->
+                                        </tr>
+                                        <% } %>
+
+                                </tbody>
+                            </table>
                         </div>
                 </div>
             </div>
