added database schema to file structure

--- a/views/students/borrowed-books.ejs
+++ b/views/students/borrowed-books.ejs
@@ -54,9 +54,9 @@
                                             </td>
                                             <td scope="row">
                                                 <% if(leftValid >= 1) { %>
-                                                    Valid
+                                                    Due
                                                 <% } else { %>
-                                                    <span style="color: red;">Invalid</span>
+                                                    <span style="color: red;">Overdue</span>
                                                 <% } %>
                                             </td>
                                             <td scope="row">
