--- a/views/students/partials/sidebar.html
+++ b/views/students/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-md-2 sidebar bg-dark">
+<div class="col-md-2 sidebar btn-light">
     <p class="">
         <a href="/students/home">
             <i class="fas fa-home"></i>
