--- a/views/admin/partials/sidebar.html
+++ b/views/admin/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-md-2 sidebar bg-dark">
+<div class="col-md-2 sidebar bg-light">
     <p class="">
         <a href="/admin/home">
             <i class="fas fa-home"></i>
